[project]
name = "sourmash_plugin_subtract_and_inflate"
description = "sourmash plugin to peform sig subtract with preserving abundance."
readme = "README.md"
requires-python = ">=3.8"
version = "0.1"

dependencies = ["sourmash>=4.8.0,<5"]

[metadata]
license = { text = "BSD 3-Clause License" }


[project.entry-points."sourmash.cli_script"]
subtract_and_inflate = "sourmash_plugin_subtract_and_inflate:Command_SubtractAndInflate"
